parser.output
Terminals unused in grammar

   COLON
   LEFT_PARENTHESES
   RIGHT_PARENTHESES
   PLUS
   MINUS
   MULTIPLI
   DIVIDE
   DEF
   TAB


Rules useless in parser due to conflicts

    7 statement: %empty


State 0 conflicts: 1 reduce/reduce
State 2 conflicts: 1 shift/reduce, 1 reduce/reduce


Grammar

    0 $accept: input $end

    1 input: statements
    2      | %empty

    3 statements: statements statement
    4           | %empty

    5 statement: NAME EQUAL NUMBER NEW_LINE
    6          | NAME EQUAL NUMBER
    7          | %empty


Terminals, with rules where they appear

$end (0) 0
error (256)
NAME (258) 5 6
NUMBER (259) 5 6
COLON (260)
LEFT_PARENTHESES (261)
RIGHT_PARENTHESES (262)
EQUAL (263) 5 6
PLUS (264)
MINUS (265)
MULTIPLI (266)
DIVIDE (267)
DEF (268)
TAB (269)
NEW_LINE (270) 5


Nonterminals, with rules where they appear

$accept (16)
    on left: 0
input (17)
    on left: 1 2, on right: 0
statements (18)
    on left: 3 4, on right: 1 3
statement (19)
    on left: 5 6 7, on right: 3


State 0

    0 $accept: . input $end

    $end      reduce using rule 2 (input)
    $end      [reduce using rule 4 (statements)]
    NAME      reduce using rule 4 (statements)
    $default  reduce using rule 2 (input)

    input       go to state 1
    statements  go to state 2


State 1

    0 $accept: input . $end

    $end  shift, and go to state 3


State 2

    1 input: statements .
    3 statements: statements . statement

    NAME  shift, and go to state 4

    $end      reduce using rule 1 (input)
    $end      [reduce using rule 7 (statement)]
    NAME      [reduce using rule 7 (statement)]
    $default  reduce using rule 1 (input)

    statement  go to state 5


State 3

    0 $accept: input $end .

    $default  accept


State 4

    5 statement: NAME . EQUAL NUMBER NEW_LINE
    6          | NAME . EQUAL NUMBER

    EQUAL  shift, and go to state 6


State 5

    3 statements: statements statement .

    $default  reduce using rule 3 (statements)


State 6

    5 statement: NAME EQUAL . NUMBER NEW_LINE
    6          | NAME EQUAL . NUMBER

    NUMBER  shift, and go to state 7


State 7

    5 statement: NAME EQUAL NUMBER . NEW_LINE
    6          | NAME EQUAL NUMBER .

    NEW_LINE  shift, and go to state 8

    $default  reduce using rule 6 (statement)


State 8

    5 statement: NAME EQUAL NUMBER NEW_LINE .

    $default  reduce using rule 5 (statement)
